Create embed video component using youtube-player

--- a/views/viewer.html
+++ b/views/viewer.html
@@ -6,6 +6,7 @@
 </head>
 <body style="margin: 0;">
     <div id="content"></div>
+    <div id="scripts"></div>
     <script type="text/javascript" src="../bundle/index.js"></script>
 </body>
 </html>
